--- a/index.ipynb
+++ b/index.ipynb
@@ -1506,12 +1506,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "def build_starting_line(x_values, y_values):\n",
-    "    return {'b': y_intercept(x_values,y_values,m=None),'m': slope(x_values,y_values)}"
+    "    return {'b': y_intercept(x_values,y_values),'m': slope(x_values,y_values)}"
    ]
   },
   {
