--- a/index.ipynb
+++ b/index.ipynb
@@ -1434,7 +1434,8 @@
     }
    ],
    "source": [
-    "slope([0,200, 400], [10,400, 700]) # 1.5"
+    "#slope([0,200, 400], [10,400, 700]) # 1.5\n",
+    "y"
    ]
   },
   {
